--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
-<html ng-app = 'myMod'>
+<html ng-app = 'helpdesk'>
 	<head>
 		<title>Are you in trouble?</title>
-		<link href = "/css/main.css" rel = "stylesheet"/>
-		<link href = "/bootstrap/css/bootstrap.min.css" rel = "stylesheet"/>
+        <meta charset = "utf-8"/>
+		<link href = "css/main.css" rel = "stylesheet"/>
+		<link href = "bootstrap/css/bootstrap.min.css" rel = "stylesheet"/>
 		<script src = "/socket.io/socket.io.js"></script>
-		<script src = "/js/libs/jquery.js"></script>
-		<script src = "/js/libs/angular.js"></script>
-		<script src = "/bootstrap/js/bootstrap.min.js"></script>
-		<script src = "/js/controllers/profilecontroller.js"></script>
+		<script src = "js/libs/jquery.js"></script>
+		<script src = "js/libs/angular.js"></script>
+		<script src = "bootstrap/js/bootstrap.min.js"></script>
+        <script src = "js/services/networkservice.js"></script>
+		<script src = "js/controllers/profilecontroller.js"></script>
+        <script src = "js/scopes/taskscope.js"></script>
+        <script src = "js/controllers/taskscontroller.js"></script>
+        <script src = "js/app.js"></script>
 	</head>
 	<body> 
-		<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
-			<div class = "profile" ng-controller = "profileController">
-				<a href = '/profile/{{ id }}/'>{{ getName() }}</a>	
-				<p>{{ email }}</p>
-			</div>
-		</nav>
-		
-		<div ng-controller = "requestController">
-			<button id = 'gm'>More</button>
-			<div ng-repeat="req in requests">
-				<div class = 'request'>{{ req.description }}</div>
-			</div> 
-		</div>
+        <div ng-controller = "tasksCntrl">
+            <button ng-click = 'save()'></button>
+            <div ng-repeat = 'task in tasks'>
+                <div>{{ task.content }}</div>
+            </div>
+        </div>
 	</body>
-	<script src = "/js/app.js"></script>
 </html>
