--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 	<head>
 		<title>Are you in trouble?</title>
         <meta charset = "utf-8"/>
+        <link href = "bootstrap/css/bootstrap.css" rel = "stylesheet"/>
+        <link href = "bootstrap/css/bootstrap-theme.css" rel = "stylesheet"/>
+
 		<link href = "css/main.css" rel = "stylesheet"/>
-		<link href = "bootstrap/css/bootstrap.min.css" rel = "stylesheet"/>
+        <link href = "css/login.css" rel = "stylesheet"/>
+        <link href = "css/task.css" rel = "stylesheet"/>
 		<script src = "/socket.io/socket.io.js"></script>
 		<script src = "js/libs/jquery.js"></script>
 		<script src = "js/libs/angular.js"></script>
@@ -15,16 +19,19 @@
         <script src = "js/controllers/taskscontroller.js"></script>
         <script src = "js/app.js"></script>
 	</head>
-	<body> 
-        <div ng-controller = "tasksCntrl">
-            <button ng-click = 'newTask()'>addTask</button>
+	<body>
+        <nav class = "navbar navbar-default navbar-fixed-top special" role = "navigation">
+            <p class = "navbar-text">Заявки</p>
+        </nav>
+        <div ng-controller = "tasksCntrl" class = "task-list">
             <div ng-repeat = 'task in tasks'>
-                <div>{{ task.content }}</div>
-                <div>{{ task.timestamp }}</div>
-                <button ng-click = 'openTask(task.taskId)'>OpenTask + {{ task.taskId }}</button>
+                <section class = 'task'>
+                    <header></header>
+                    <h3>{{ task.title }}</h3>
+                    <div> {{ task.content.slice(0, 120) }}</div>
+                </section>
             </div>
         </div>
-
         <div class="task-view"></div>
 	</body>
 </html>
