--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <nav class = "navbar navbar-default navbar-fixed-top special" role = "navigation">
             <p class = "navbar-text">Заявки</p>
         </nav>
+
+        <div class="filters"> <div class = 'open-filter-button'>Фильтры</div></div>
         <div ng-controller = "tasksCntrl" class = "task-list">
             <div ng-repeat = 'task in tasks'>
                 <section class = 'task'>
