- Add login function

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div ng-controller = "tasksCntrl" class = "task-list">
             <section class = 'task' ng-repeat = 'task in tasks'>
                 <header></header>
-                <h3>{{ task.title }}</h3>
+                <!--<h3>{{ task.title }}</h3>-->
                 <div> {{ task.content.slice(0, 120) }}</div>
             </section>
         </div>
