--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link href = "css/main.css" rel = "stylesheet"/>
         <link href = "css/login.css" rel = "stylesheet"/>
         <link href = "css/task.css" rel = "stylesheet"/>
-
+        <link href = "css/filter.css" rel = "stylesheet"/>
 		<script src = "/socket.io/socket.io.js"></script>
 		<script src = "js/libs/jquery.js"></script>
 		<script src = "js/libs/angular.js"></script>
@@ -19,6 +19,7 @@
 		<script src = "js/controllers/profilecontroller.js"></script>
         <script src = "js/scopes/taskscope.js"></script>
         <script src = "js/controllers/taskscontroller.js"></script>
+        <script src = "js/controllers/filterscontroller.js"></script>
         <script src = "js/app.js"></script>
 	</head>
 	<body>
@@ -26,7 +27,17 @@
             <p class = "navbar-text">Заявки</p>
         </nav>
 
-        <div class = "filters"> <div class = 'open-filter-button'></div></div>
+        <div class = "filters" ng-controller = "filterCntrl">
+            <div class = 'open-filter-button'></div>
+            <input type = "text" ng-model = "filterName" />
+            <h6>Кафедры</h6>
+            <ul>
+                <li ng-repeat = 'filterItem in filters | filter : filterName ' ng-style = "myStyle"  ng-click = "myStyle = { background : filterItem.color, color : 'white' }">
+                  <span class = "color-label" ng-style = "{ background : filterItem.color }"></span>  {{ filterItem.name }}
+                </li>
+            </ul>
+        </div>
+
         <div ng-controller = "tasksCntrl" class = "task-list">
             <section class = 'task' ng-repeat = 'task in tasks'>
                 <header></header>
