--- a/index.html
+++ b/index.html
@@ -1,50 +1,53 @@
-<html ng-app = 'helpdesk'>
-	<head>
-		<title>Are you in trouble?</title>
-        <meta charset = "utf-8"/>
-        <link href = "bootstrap/css/bootstrap.css" rel = "stylesheet"/>
-        <link href = "bootstrap/css/bootstrap-theme.css" rel = "stylesheet"/>
+<html ng-app='helpdesk'>
+<head>
+    <title>Are you in trouble?</title>
+    <meta charset="utf-8"/>
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet"/>
+    <link href="bootstrap/css/bootstrap-theme.css" rel="stylesheet"/>
 
-		<link href = "css/main.css" rel = "stylesheet"/>
-        <link href = "css/login.css" rel = "stylesheet"/>
-        <link href = "css/task.css" rel = "stylesheet"/>
-        <link href = "css/filter.css" rel = "stylesheet"/>
-		<script src = "/socket.io/socket.io.js"></script>
-		<script src = "js/libs/jquery.js"></script>
-		<script src = "js/libs/angular.js"></script>
-		<script src = "bootstrap/js/bootstrap.min.js"></script>
-        <script src = "js/helpers/templatehelper.js"></script>
-        <script src = "js/helpers/interface.js"></script>
-        <script src = "js/services/networkservice.js"></script>
-		<script src = "js/controllers/profilecontroller.js"></script>
-        <script src = "js/scopes/taskscope.js"></script>
-        <script src = "js/controllers/taskscontroller.js"></script>
-        <script src = "js/controllers/filterscontroller.js"></script>
-        <script src = "js/app.js"></script>
-	</head>
-	<body>
-        <nav class = "navbar navbar-default navbar-fixed-top special" role = "navigation">
-            <p class = "navbar-text">Заявки</p>
-        </nav>
+    <link href="css/main.css" rel="stylesheet"/>
+    <link href="css/login.css" rel="stylesheet"/>
+    <link href="css/task.css" rel="stylesheet"/>
+    <link href="css/filter.css" rel="stylesheet"/>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="js/libs/jquery.js"></script>
+    <script src="js/libs/angular.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/helpers/templatehelper.js"></script>
+    <script src="js/helpers/interface.js"></script>
+    <script src="js/services/service.js"></script>
+    <script src="js/services/networkservice.js"></script>
+    <script src="js/services/filtersprovider.js"></script>
+    <script src="js/controllers/profilecontroller.js"></script>
+    <script src="js/scopes/taskscope.js"></script>
+    <script src="js/controllers/taskscontroller.js"></script>
+    <script src="js/controllers/filterscontroller.js"></script>
+    <script src="js/app.js"></script>
+</head>
+<body>
+<nav class="navbar navbar-default navbar-fixed-top special" role="navigation">
+    <p class="navbar-text">Заявки</p>
+</nav>
 
-        <div class = "filters" ng-controller = "filterCntrl">
-            <div class = 'open-filter-button'></div>
-            <input type = "text" ng-model = "filterName" />
-            <h6>Кафедры</h6>
-            <ul>
-                <li ng-repeat = 'filterItem in filters | filter : filterName ' ng-style = "myStyle"  ng-click = "myStyle = { background : filterItem.color, color : 'white' }">
-                  <span class = "color-label" ng-style = "{ background : filterItem.color }"></span>  {{ filterItem.name }}
-                </li>
-            </ul>
-        </div>
+<div class="filters" ng-controller="filterCntrl">
+    <div class='open-filter-button'></div>
+    <input type="text" ng-model="filterName"/>
+    <h6>Кафедры</h6>
+    <ul>              <!--myStyle = { background : filterItem.color, color : 'white' }-->
+        <li ng-repeat='filterItem in filters | filter : filterName ' ng-style="myStyle"
+            ng-click="alert('bitch')"> <!-- events.click($event) -->
+            <span class="color-label" ng-style="{ background : filterItem.color }"></span> {{ filterItem.name }}
+        </li>
+    </ul>
+</div>
 
-        <div ng-controller = "tasksCntrl" class = "task-list">
-            <section class = 'task' ng-repeat = 'task in tasks'>
-                <header></header>
-                <!--<h3>{{ task.title }}</h3>-->
-                <div> {{ task.content.slice(0, 120) }}</div>
-            </section>
-        </div>
-        <div class="task-view"></div>
-	</body>
+<div ng-controller="tasksCntrl" class="task-list">
+    <section class='task' ng-repeat='task in tasks'>
+        <header></header>
+        <!--<h3>{{ task.title }}</h3>-->
+        <div> {{ task.content.slice(0, 120) }}</div>
+    </section>
+</div>
+<div class="task-view"></div>
+</body>
 </html>
