--- a/console.html
+++ b/console.html
@@ -5,6 +5,6 @@
     <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
-<div><p>Use io.connect to estabilish socket connection.</p></div>
+<div><p>Use io.connect to establish socket connection.</p></div>
 </body>
 </html>
