--- a/index.html
+++ b/index.html
@@ -32,10 +32,18 @@
 
 <div class="filters" ng-controller="filterCntrl">
     <div class='open-filter-button'></div>
-    <input type="text" ng-model="filterName"/>
+    <input type="text" ng-model="filterName" style="margin-left: 10px"/>
     <h6>Кафедры</h6>
-    <ul>              <!--myStyle = { background : filterItem.color, color : 'white' }-->
-        <li ng-repeat='filterItem in filters | filter : filterName ' ng-style="myStyle"
+    <ul>
+        <li ng-repeat='filterItem in filters.universityDep | filter : filterName ' ng-style="myStyle"
+            ng-click="events.click($event)" data-id = '{{ filterItem.id }}'> <!-- events.click($event) -->
+            <span class="color-label" ng-style="{ background : filterItem.color }"></span> {{ filterItem.name }}
+        </li>
+    </ul>
+
+    <h6>Тип заявки</h6>
+    <ul>
+        <li ng-repeat='filterItem in filters.taskTypes | filter : filterName ' ng-style="myStyle"
             ng-click="events.click($event)" data-id = '{{ filterItem.id }}'> <!-- events.click($event) -->
             <span class="color-label" ng-style="{ background : filterItem.color }"></span> {{ filterItem.name }}
         </li>
@@ -49,6 +57,9 @@
             <h4>НОВАЯ ЗАЯВКА</h4>
         </header>
         <textarea></textarea>
+        <select ng-model = 'selectedUniDep' ng-options = 'uni.id as uni.name for uni in filters.universityDep'></select>
+        <select ng-model = 'selectedTaskType' ng-options = 'uni.id as uni.name for uni in filters.taskTypes'></select>
+        <div class = 'button-save' ng-click = 'save()'>Сохранить</div>
     </section>
     <section class='task' ng-repeat='task in tasks'>
         <header></header>
