--- a/index.html
+++ b/index.html
@@ -29,16 +29,20 @@
     <script src="js/validator.js"></script>
     <script src="js/app.js"></script>
 </head>
-<body>
+<body ng-controller="tasksCntrl">
 <nav class="navbar navbar-default navbar-fixed-top special" role="navigation">
     <div class="navbar-text"><div class="glyphicon glyphicon-align-justify"></div> Заявки</div>
-    <div class="navbar-text"><div class="glyphicon glyphicon-user"></div> Команды</div>
-    <div ng-controller="tasksCntrl" class="navbar-right">
+    <!--<div class="navbar-text"><div class="glyphicon glyphicon-user"></div> Команды</div>-->
+    <div class="navbar-text table-mode"><div class="glyphicon glyphicon-th-list"></div> Режим таблицы</div>
+    <div class="navbar-text grid-mode"><div class="glyphicon glyphicon-th"></div> Режим сетки</div>
+    <div class="navbar-right">
         <div ng-class = "{ hidden : profile[0].role != 'client' && profile[0].role != 'department chief' }" class = "glyphicon glyphicon-edit add-new-task-button"></div>
+        <div class="navbar-text logout">Выйти из системы</div>
     </div>
+
 </nav>
 
-<div class="filters" ng-controller="filterCntrl">
+<div ng-controller = 'filterCntrl' class="filters">
     <div class='open-filter-button'></div>
     <input type="text" ng-model="filterName" style="margin-left: 10px"/>
     <h6>Кафедры</h6>
@@ -58,20 +62,24 @@
     </ul>
 </div>
 
-<table ng-controller="tasksCntrl" class="table table-hover table-view" style="display: none">
+<table  class="table table-hover table-view">
     <thead>
         <th>#</th>
         <th>Заявка</th>
+        <th>Комментарии</th>
+        <th>Назначены</th>
     </thead>
     <tbody>
-        <tr ng-repeat="task in tasks">
+        <tr ng-repeat="task in tasks" ng-click = 'openTask(task.id)'>
             <td>{{ task.id }}</td>
-            <td>{{ task.content.slice(0,120) }}</td>
+            <td style="max-width: 150px">{{ task.content.slice(0,120) }}</td>
+            <td><span class = "glyphicon glyphicon-comment"></span> {{ task.comment_count }}</td>
+            <td><span class = "glyphicon glyphicon-user"></span> {{ task.helper_ids.length }}</td>
         </tr>
     </tbody>
 </table>
 
-<div ng-controller="tasksCntrl" class="task-list">
+<div class="task-list" style="display: none">
     <section class='task' ng-repeat='task in tasks'>
         <header></header>
         <!--<h3>{{ task.title }}</h3>-->
@@ -89,7 +97,9 @@
             <div>{{ task.helper_ids.length }}</div>
         </div>
     </section>
+</div>
 
+<div>
     <section class="task new-task" ng-class = '{ lite : profile[0].role != "department chief" }'>
         <header>
             <div class = "glyphicon glyphicon-edit add-new-task-inline"></div>
@@ -103,9 +113,7 @@
         <div class = 'button-save' ng-click = 'save()'>Сохранить</div>
     </section>
 
-    <section class="task opened-task">
-
-    </section>
+    <section class="task opened-task"> </section>
 
     <div class="blackout"></div>
 </div>
