--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html ng-app='helpdesk'>
+<!DOCTYPE html>
+<html ng-app = 'helpdesk' xmlns = "http://www.w3.org/1999/html">
 <head>
     <title>Are you in trouble?</title>
     <meta charset="utf-8"/>
@@ -21,102 +22,192 @@
     <script src="js/services/filtersprovider.js"></script>
     <script src="js/services/subdepartprovider.js"></script>
     <script src="js/services/universitydepservice.js"></script>
+    <script src="js/services/profilesprovider.js"></script>
     <script src="js/services/profileprovider.js"></script>
-    <script src="js/controllers/profilecontroller.js"></script>
-    <script src="js/scopes/taskscope.js"></script>
+    <script src="js/services/taskTypesProvider.js"></script>
+    <script src="js/controllers/profilescontroller.js"></script>
     <script src="js/controllers/taskscontroller.js"></script>
     <script src="js/controllers/filterscontroller.js"></script>
+    <script src="js/controllers/subdepscontoller.js"></script>
+    <script src="js/controllers/tasktypescontroller.js"></script>
+    <script src="js/controllers/profilecontroller.js"></script>
     <script src="js/validator.js"></script>
     <script src="js/app.js"></script>
 </head>
-<body ng-controller="tasksCntrl">
-<nav class="navbar navbar-default navbar-fixed-top special" role="navigation">
-    <div class="navbar-text tasks-view" ng-class = "{ hidden : profile[0].role != 'department chief' }"><div class="glyphicon glyphicon-align-justify"></div> Заявки</div>
-    <div class="navbar-text profiles-view" ng-class = "{ hidden : profile[0].role != 'department chief' }"><div class="glyphicon glyphicon-user"></div> Реестры</div>
-    <div class="navbar-text table-mode"><div class="glyphicon glyphicon-th-list"></div> Режим таблицы</div>
-    <div class="navbar-text grid-mode"><div class="glyphicon glyphicon-th"></div> Режим сетки</div>
-    <div class="navbar-right">
-        <div ng-class = "{ hidden : profile[0].role != 'client' && profile[0].role != 'department chief' }" class = "glyphicon glyphicon-edit add-new-task-button"></div>
-        <div class="navbar-text logout">Выйти из системы</div>
+<body>
+    <nav class ='navbar navbar-default special'>
+        <a class="navbar-brand" href="#">КУБГАУ</a>
+    </nav>
+    <aside ng-controller = "profileCntrl">
+        <div class = "icon active" data-tab-name = 'tasks'>
+            <div class = "glyphicon glyphicon-tasks"></div>
+            <div>Заявки {{ hop }}</div>
+        </div>
+        <div ng-class = "{ hidden : profile[0].role != 'department chief'}" class = "icon" data-tab-name="profiles">
+            <div class = "glyphicon glyphicon-user"></div>
+            <div>Профили</div>
+        </div>
+        <div ng-class = "{ hidden : profile[0].role != 'department chief'}" class = "icon" data-tab-name="subdeps">
+            <div class = "glyphicon glyphicon-bookmark"></div>
+            <div>Отделы</div>
+        </div>
+        <div ng-class = "{ hidden : profile[0].role != 'department chief'}" class = "icon" data-tab-name="taskTypes">
+            <div class = "glyphicon glyphicon-book"></div>
+            <div>Типы заявок</div>
+        </div>
+    </aside>
+
+    <div class = 'view tasks active'  ng-controller="tasksCntrl">
+        <header>
+            <input type = "text" ng-model = 'taskName' placeholder="Поиск заявки..."/>
+            <div class = 'button-new add-new-task-button'>Новая заявка {{ tasks.length }}</div>
+        </header>
+        <div class = "table-container">
+            <table class = 'table head'>
+                <thead>
+                    <th>#</th>
+                    <th>Заявка</th>
+                    <th>Кол-во комментариев</th>
+                    <th>Назначено</th>
+                    <th>Отдел</th>
+                    <th>Факультет</th>
+                    <th>Дата создания</th>
+                </thead>
+            </table>
+            <div class = "scrollable">
+                <table class = 'table table-striped'>
+                    <tbody>
+                        <tr ng-repeat="task in tasks | filter:taskName" ng-click = "openTask(task.id)">
+                            <td>{{ task.id }}</td>
+                            <td>{{ task.content.slice(0,120) }}</td>
+                            <td>{{ task.commentCount }}</td>
+                            <td>{{ task.helperIds.length }}</td>
+                            <td>{{ getSubDep(task.subdepartmentId) }}</td>
+                            <td>{{ getUniDep(task.universityDepartmentId) }}</td>
+                            <td>{{ task.createdAt }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <section class = 'filters' ng-controller = "filterCntrl">
+            <h4>Фильтры</h4>
+            <div><input type="text" ng-model = 'filterName' placeholder="Поиск по фильтрам..."/></div>
+            <div class = 'filters-caption'>Типы заявок</div>
+            <ul>
+                <li ng-repeat='filterItem in filters.taskTypes | filter : filterName ' ng-style="myStyle"
+                    ng-click="events.click($event, 'tasks')" data-section = 'taskTypes' data-id = '{{ filterItem.id }}'> <!-- events.click($event) -->
+                    {{ filterItem.name }}
+                </li>
+            </ul>
+            <div ng-class = "{ hidden : profile[0].role == 'client'}" class = 'filters-caption'>Отделы</div>
+            <ul>
+                <li ng-repeat='filterItem in filters.subDeps | filter : filterName ' ng-style="myStyle"
+                    ng-click="events.click($event, 'tasks')" data-section = 'subDeps' data-id = '{{ filterItem.id }}'> <!-- events.click($event) -->
+                    {{ filterItem.name }}
+                </li>
+            </ul>
+            <div ng-class = "{ hidden : profile[0].role == 'client'}" class = 'filters-caption'>Факультеты</div>
+            <ul>
+                <li ng-repeat='filterItem in filters.universityDep | filter : filterName' ng-style="myStyle"
+                    ng-click="events.click($event, 'tasks')" data-section = 'universityDep' data-id = '{{ filterItem.id }}'> <!-- events.click($event) -->
+                    {{ filterItem.name }}
+                </li>
+            </ul>
+        </section>
     </div>
 
-</nav>
-
-<div ng-controller = 'filterCntrl' class="filters">
-    <div class='open-filter-button'></div>
-    <input type="text" ng-model="filterName" style="margin-left: 10px"/>
-    <h6 ng-class = "{ hidden : profile[0].role == 'client' }">Кафедры</h6>
-    <ul>
-        <li ng-repeat='filterItem in filters.universityDep | filter : filterName ' ng-style="myStyle"
-            ng-click="events.click($event)" data-section = 'universityDep' data-id = '{{ filterItem.id }}'> <!-- events.click($event) -->
-            <span class="color-label" ng-style="{ background : filterItem.color }"></span> {{ filterItem.name }}
-        </li>
-    </ul>
-
-    <h6>Тип заявки</h6>
-    <ul>
-        <li ng-repeat='filterItem in filters.taskTypes | filter : filterName ' ng-style="myStyle"
-            ng-click="events.click($event)" data-section = 'taskTypes' data-id = '{{ filterItem.id }}'> <!-- events.click($event) -->
-            <span class="color-label" ng-style="{ background : filterItem.color }"></span> {{ filterItem.name }}
-        </li>
-    </ul>
-</div>
-
-<table class="table table-hover table-view">
-    <thead>
-        <th>#</th>
-        <th>Заявка</th>
-        <th>Комментарии</th>
-        <th>Назначены</th>
-    </thead>
-    <tbody>
-        <tr ng-repeat="task in tasks" ng-click = 'openTask(task.id)'>
-            <td>{{ task.id }}</td>
-            <td style="max-width: 650px">{{ task.content.slice(0,120) }}</td>
-            <td><span class = "glyphicon glyphicon-comment"></span> {{ task.commentCount }}</td>
-            <td><span class = "glyphicon glyphicon-user"></span> {{ task.helperIds.length }}</td>
-        </tr>
-    </tbody>
-</table>
-
-<table class = "table table-hover profiles" style="display: none;" ng-controller = "ProfilesCtrl">
-    <thead>
-        <th>#</th>
-        <th>Имя</th>
-        <th>Отдел</th>
-        <th>Факультет</th>
-    </thead>
-    <tbody>
-        <tr ng-repeat="profile in profiles" ng-click="openProfile(profile.id)">
-            <td>{{ profile.id }}</td>
-            <td>{{ profile.displayName }}</td>
-            <td>{{ getSubDep(profile.subdepartmentId) }}</td>
-            <td>{{ getUniDep(profile.universityDepartmentId) }}</td>
-        </tr>
-    </tbody>
-</table>
-
-<div class="task-list" style="display: none">
-    <section class='task' ng-repeat='task in tasks'>
-        <header></header>
-        <!--<h3>{{ task.title }}</h3>-->
-        <div> {{ task.content.slice(0, 120) }}</div>
-        <div class='button-section view' ng-click = 'openTask(task.id)'>
-            <div class="glyphicon glyphicon-eye-open"></div>
-            <div>Показать</div>
+    <div class = 'view profiles'  ng-controller="profilesCtrl">
+        <header>
+            <input type = "text" ng-model = 'profileName' placeholder="Поиск профиля..."/>
+        </header>
+        <div class = 'table-container'>
+            <table class = 'table head'>
+                <thead>
+                    <th>#</th>
+                    <th>Имя</th>
+                    <th>Email</th>
+                    <th>Телефон</th>
+                    <th>Отдел</th>
+                    <th>Факультет</th>
+                    <th>Дата создания</th>
+                </thead>
+            </table>
+            <div class = 'scrollable'>
+                <table class = 'table table-striped'>
+                    <tbody>
+                        <tr ng-repeat="profile in profiles | filter : profileName" ng-click = "openProfile(profile.id)">
+                            <td>{{ profile.id }}</td>
+                            <td>{{ profile.displayName.slice(0,120) }}</td>
+                            <td>{{ profile.email }}</td>
+                            <td>{{ profile.phone}}</td>
+                            <td>{{ getSubDep(profile.subdepartmentId) }}</td>
+                            <td>{{ getUniDep(profile.universityDepartmentId) }}</td>
+                            <td>{{ profile.createdAt }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
-        <div class='button-section comments'>
-            <div class="glyphicon glyphicon-comment"></div>
-            <div>{{ task.commentCount }}</div>
-        </div>
-        <div class='button-section onit'>
-            <div class="glyphicon glyphicon-user"></div>
-            <div>{{ task.helperIds.length }}</div>
-        </div>
-    </section>
-</div>
 
-<div>
+        <section class = 'filters' ng-controller = "filterCntrl">
+            <h4>Фильтры</h4>
+            <div><input type="text" ng-model = 'filterName' placeholder="Поиск по фильтрам..."/></div>
+            <div class = 'filters-caption'>Отделы</div>
+            <ul>
+                <li ng-repeat='filterItem in filters.subDeps | filter : filterName ' ng-style="myStyle"
+                    ng-click="events.click($event, 'profile')" data-section = 'subDeps' data-id = '{{ filterItem.id }}'> <!-- events.click($event) -->
+                    {{ filterItem.name }}
+                </li>
+            </ul>
+            <div class = 'filters-caption'>Факультеты</div>
+            <ul>
+                <li ng-repeat='filterItem in filters.universityDep | filter : filterName' ng-style="myStyle"
+                    ng-click="events.click($event, 'profile')" data-section = 'universityDep' data-id = '{{ filterItem.id }}'> <!-- events.click($event) -->
+                    {{ filterItem.name }}
+                </li>
+            </ul>
+        </section>
+    </div>
+
+    <div class = 'view subdeps'  ng-controller="subDepsCntrl">
+        <header>
+            <input type = "text" ng-model = 'subDepName' placeholder="Поиск отдела..."/>
+            <div class = 'button-new add-new-subdep-button'>Новый отдел {{ subDeps.length }}</div>
+        </header>
+        <table class = 'table'>
+            <thead>
+            <th>#</th>
+            <th>Имя</th>
+            </thead>
+            <tbody>
+            <tr ng-repeat="sd in subDeps | filter : subDepName">
+                <td>{{ sd.id }}</td>
+                <td>{{ sd.name.slice(0,120) }}</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class = 'view task-types'  ng-controller="taskTypesCntrl">
+        <header>
+            <input type = "text" ng-model = 'taskTypeName' placeholder="Поиск заявки..."/>
+            <div class = 'button-new add-new-task-type-button'>Новая тип заявки {{ taskTypes.length }}</div>
+        </header>
+        <table class = 'table'>
+            <thead>
+                <th>#</th>
+                <th>Имя</th>
+            </thead>
+            <tbody>
+            <tr ng-repeat="tt in taskTypes | filter : taskTypeName">
+                <td>{{ tt.id }}</td>
+                <td>{{ tt.name.slice(0,120) }}</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
     <section class="task new-task" ng-class = '{ lite : profile[0].role != "department chief" }'>
         <header>
             <div class = "glyphicon glyphicon-edit add-new-task-inline"></div>
@@ -130,9 +221,8 @@
         <div class = 'button-save' ng-click = 'save()'>Сохранить</div>
     </section>
 
-    <section class="task opened-task"> </section>
-    <section class="opened-profile"> </section>
-    <div class="blackout"></div>
-</div>
+    <div class = 'task opened-task'></div>
+    <div class = 'opened-profile'></div>
+    <div class = 'blackout'></div>
 </body>
 </html>
