--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class = 'view tasks active'  ng-controller="tasksCntrl">
         <header>
             <input type = "text" ng-model = 'taskName' placeholder="Поиск заявки..."/>
-            <div class = 'button-new add-new-task-button'>Новая заявка {{ tasks.length }}</div>
+            <div class = 'button-new add-new-task-button'>Новая заявка </div>
         </header>
         <div class = "table-container">
             <table class = 'table head' style="width: auto; max-width: none;">
@@ -187,7 +187,7 @@
     <div class = 'view subdeps'  ng-controller="subDepsCntrl">
         <header class = "no-filters">
             <input type = "text" ng-model = 'subDepName' placeholder="Поиск отдела..."/>
-            <div class = 'button-new add-new-subdep-button'>Новый отдел {{ subDeps.length }}</div>
+            <div class = 'button-new add-new-subdep-button'>Новый отдел</div>
         </header>
         <table class = 'table'>
             <thead>
@@ -215,7 +215,7 @@
     <div class = 'view task-types'  ng-controller="taskTypesCntrl">
         <header class = "no-filters">
             <input type = "text" ng-model = 'taskTypeName' placeholder="Поиск заявки..."/>
-            <div class = 'button-new add-new-task-type-button'>Новая тип заявки {{ taskTypes.length }}</div>
+            <div class = 'button-new add-new-task-type-button'>Новая тип заявки</div>
         </header>
         <table class = 'table'>
             <thead>
