--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
         <div class = "table-container">
             <table class = 'table head' style="width: auto; max-width: none;">
                 <thead>
-                    <th>#</th>
-                    <th>Заявка</th>
-                    <th><span class="glyphicon glyphicon-comment"></span></th>
-                    <th><span class="glyphicon glyphicon-user"></span></th>
-                    <th>Отдел</th>
-                    <th>Факультет</th>
-                    <th>Дата создания</th>
+                    <th data-perc = '5'>#</th>
+                    <th data-perc = '30'>Заявка</th>
+                    <th data-perc = '10'><span class="glyphicon glyphicon-comment"></span></th>
+                    <th data-perc = '10'><span class="glyphicon glyphicon-user"></span></th>
+                    <th data-perc = "17.5">Отдел</th>
+                    <th data-perc = '17.5'>Факультет</th>
+                    <th data-perc = '10'>Дата создания</th>
                 </thead>
             </table>
             <div class = "scrollable">
@@ -138,13 +138,13 @@
         <div class = 'table-container'>
             <table class = 'table head'>
                 <thead>
-                    <th>#</th>
-                    <th>Имя</th>
-                    <th>Email</th>
-                    <th>Телефон</th>
-                    <th>Отдел</th>
-                    <th>Факультет</th>
-                    <th>Дата создания</th>
+                    <th data-perc="5">#</th>
+                    <th data-perc="20">Имя</th>
+                    <th data-perc="10">Email</th>
+                    <th data-perc="10">Телефон</th>
+                    <th data-perc="20">Отдел</th>
+                    <th data-perc="20">Факультет</th>
+                    <th data-perc="15">Дата создания</th>
                 </thead>
             </table>
             <div class = 'scrollable'>
