Fixed table.head width bug

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class = 'button-new add-new-task-button'>Новая заявка </div>
         </header>
         <div class = "table-container">
-            <table class = 'table head' style="width: auto; max-width: none;">
+            <table class = 'table head'>
                 <thead>
                     <th style="width: 5%">#</th>
                     <th style="width: 30%">Заявка</th>
