--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class = 'view tasks active'  ng-controller="tasksCntrl">
         <header>
             <input type = "text" ng-model = 'taskName' placeholder="Поиск заявки..."/>
-            <div class = 'button-new add-new-task-button'>Новая заявка </div>
+            <div ng-class = "{ hidden : 'client' && profile[0].role != 'department chief' }" class = 'button-new add-new-task-button'>Новая заявка </div>
         </header>
         <div class = "table-container">
             <table class = 'table head'>
@@ -102,7 +102,7 @@
                     {{ filterItem.name }}
                 </li>
             </ul>
-            <div ng-class = "{ hidden : profile[0].role == 'client'}" class = 'filters-caption'>Отделы</div>
+            <div ng-class = "{ hidden : profile[0].role != 'department chief'}" class = 'filters-caption'>Отделы</div>
             <ul>
                 <li ng-repeat='filterItem in filters.subDeps | filter : filterName ' ng-style="myStyle"
                     ng-click="events.click($event, 'tasks')" data-section = 'subDeps' data-id = '{{ filterItem.id }}'> <!-- events.click($event) -->
